[gd_scene load_steps=8 format=2]

[ext_resource path="res://source/entity/camera/Camera.gd" type="Script" id=1]
[ext_resource path="res://assets/entity/state_controller.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/entity/camera/CameraStateLook.gd" type="Script" id=4]
[ext_resource path="res://source/entity/camera/CameraStateTarget.gd" type="Script" id=5]
[ext_resource path="res://source/entity/camera/CameraStateOrbit.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
resource_name = "BarsAppear"
tracks/0/type = "bezier"
tracks/0/path = NodePath("CanvasCamera/BarTop:rect_scale:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CanvasCamera/BarBottom:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}

[sub_resource type="Animation" id=2]
resource_name = "BarsDisappear"
tracks/0/type = "bezier"
tracks/0/path = NodePath("CanvasCamera/BarTop:rect_scale:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CanvasCamera/BarBottom:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}

[node name="Camera" type="SpringArm"]
collision_mask = 14
spring_length = 5.0
margin = 0.1
script = ExtResource( 1 )

[node name="StateController" parent="." instance=ExtResource( 2 )]

[node name="Orbit" type="Node" parent="StateController"]
script = ExtResource( 6 )

[node name="Look" type="Node" parent="StateController"]
script = ExtResource( 4 )

[node name="Target" type="Node" parent="StateController"]
script = ExtResource( 5 )

[node name="CameraLens" type="Camera" parent="."]
transform = Transform( 1, 3.55271e-15, -1.05879e-22, -3.55271e-15, 1, -2.98023e-08, 0, 2.98023e-08, 1, 0, 0, 0 )
fov = 60.0
near = 0.01
far = 250.0

[node name="Animation" type="Node" parent="CameraLens"]

[node name="AnimationCam" type="Tween" parent="CameraLens/Animation"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="CameraLens/Animation"]
anims/BarsAppear = SubResource( 1 )
anims/BarsDisappear = SubResource( 2 )

[node name="CanvasCamera" type="CanvasLayer" parent="CameraLens/Animation"]

[node name="BarTop" type="ColorRect" parent="CameraLens/Animation/CanvasCamera"]
anchor_right = 1.0
margin_bottom = 96.0
grow_horizontal = 2
rect_scale = Vector2( 1, 1e-05 )
color = Color( 0, 0, 0, 1 )

[node name="BarBottom" type="ColorRect" parent="CameraLens/Animation/CanvasCamera"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -86.0
margin_bottom = 10.0
grow_horizontal = 2
rect_scale = Vector2( 1, 1e-05 )
rect_pivot_offset = Vector2( 0, 96 )
color = Color( 0, 0, 0, 1 )
